kubernetes/kustomizations/managment/grafanaUi.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`grafana.talos.m1xxos.me`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
      sticky:
        cookie: {}
