kubernetes/kustomizations/managment/hubbleUi.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - hubble.talos.m1xxos.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      namespace: kube-system
      port: 80
